--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     <a href=""><img src="assets/icons/logo_small.svg" alt=""></a>
                 </picture>
 
-                <div class="menu-button">
-                    <button class="menu-button__hamburger"></button>
-                </div>
+                <button class="menu-button">
+                    <div class="menu-button__hamburger"></div>
+                </button>
 
             </div>
         </header>
@@ -51,7 +51,7 @@
     
                 <div class="promo__content">
                     <figure class="promo__flower">
-                        <img src="assets/icons/icon_2.svg" alt="">
+                        <img src="assets/icons/icon_1.svg" alt="">
                     </figure>
                     
                     <p class="promo__text">The calmness of your inner, health & strength are the most important things to mention when designing a yoga landing page.</p>
