Add button to hero

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header__inner">
 
                 <picture class="header__logo">
-                    <a href=""><img src="assets/icons/logo_small.svg" alt=""></a>
+                    <a href=""><img src="assets/icons/logo_small.svg" alt="" class="header__logo"></a>
                 </picture>
 
                 <button class="menu-button">
@@ -36,7 +36,12 @@
 
                     <h1 class="hero__title">Yogibear</h1>
                     <p class="hero__text">Proffessional Yoga institute</p>
-                    <a href="" class="hero__link">Explore your inner bear</a>
+                    
+                    <a href="" class="hero__link">
+                        <img src="assets/icons/button.svg" alt="" class="hero__arrow">
+                        
+                        Explore your inner bear
+                    </a>
                 </div>
 
             </div>
