--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
         <!-- HERO -->
         <section class="hero">
             <div class="hero__inner">
+                
+                <picture class="hero__img">
+                    <img src="assets/images/mandala.png" alt="">
+                </picture>
 
                 <div class="hero__content">
+
                     <figure class="hero__flower">
                         <img src="assets/icons/icon_1.svg" alt="">
                     </figure>
